--- a/style.css
+++ b/style.css
@@ -10,22 +10,25 @@
 body {
     background-color: rgb(46, 46, 46);
     font-family: Ubuntu, sans-serif;
+    text-align: center;
 }
 
 /* Nav Bar */
+
+nav {
+    position: fixed;
+    display: none;
+}
 
 ul {
     color: rgb(46, 46, 46);
     display: flex;
     justify-content: space-between;
-    width: 40%;
-    float: right;
+    width: 120%;
     margin: 2%;
     list-style-type: none;
     font-size: 2.5vw;
-    font-family: Ubuntu, sans-serif;
     font-weight: bold;
-    background-color: blue;
     padding: 0.5em;
     border-radius: 50px;
     background-image: url("./images/zan-yBEUD8SWABc-unsplash.jpg");
@@ -33,8 +36,50 @@ ul {
 
 /* Main Content */
 
-h1 {
-    padding-top: 20rem;
+.main-title {
+    background-color: brown;
+}
+.main-title h1 {
     text-align: center;
     font-size: 4rem;
+    padding: 20px;
+
+}
+
+/* About */
+
+.about {
+    display: flex;
+    color: aliceblue;
+}
+
+#section-container {
+    display: grid;
+    grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+    width: 100vw;
+    height: 100vh;
+}
+
+#section-container img {
+    grid-area: 1 / 2 / 6 / 8;
+    border-radius: 50%;
+    width: 100%;
+    animation: float 6s ease-in-out infinite;
+    z-index: -1;
+}
+
+@keyframes float {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 30px); }
+    100%   { transform: translate(0, -0px); }   
+}
+
+#section-container h1 {
+    grid-area: 2 / 6 / span 2 / span 2;
+    font-size: 3.5vw;
+}
+
+#section-container h2 {
+    grid-area: 4 / 5 / span 2 / span 5;
+    font-size: 2vw;
 }
